Add data from Storage Account and Cosmos DB
